# excel-ai-agent

./: .gitignore  CLAUDE.md  FORMULA_WRITING_IMPLEMENTATION.md  SESSION_STATE.md  pyproject.toml
.claude/: ANALYSIS_GUIDE.md  PROJECT_ROADMAP_WITH_DEADLINES.md  SESSION_STATE.md  settings.local.json
.claude/tasks/: AI_EXECUTOR_IMPLEMENTATION.md  AUTHENTICATION_AND_CERTIFICATES.md  ERROR_ANALYSIS.md  EXCEL_AI_AGENT_MVP.md  FASTAPI_BACKEND_IMPLEMENTATION.md  GEMINI_AI_CHAT_HISTORY_IMPLEMENTATION.md  SUPABASE_AUTHENTICATION_IMPLEMENTATION.md  authentication.txt  cursor_chat_enhacement.txt
backend/: Dockerfile.executor  create_test_user.py  debug_api_endpoint.py  debug_api_error.py  debug_api_vs_direct.py  debug_function_calling.py  debug_function_calling_simple.py  debug_service_response.py  get_user_id.py  info.txt  pyproject.toml  sales_q1_2024.xlsx  sales_q2_2024.xlsx  sales_q3_2024.xlsx  sample_sales_data.csv  sample_sales_data.xlsx  test_auth.py  test_request.json  test_sales_data_generation.py  test_simple_gemini.py  test_vlookup.json  ~$sales_q2_2024.xlsx
backend/app/: main.py
backend/app/api/v1/: ai_executor.py  auth.py  chat.py
backend/app/auth/: dependencies.py  jwt_handler.py
backend/app/config/: database.py  info.txt  settings.py
backend/app/schemas/: ai_executor.py  auth.py  chat.py
backend/app/services/: excel_parser_service.py  gemini_service.py
backend/app/services/ai_executor/: __init__.py  docker_sandbox.py  executor.py  validator.py
backend/debugging/: debug_descriptions.py  debug_keywords.py
backend/ssl/: cert.pem  key.pem  localhost+2-key.pem  localhost+2.pem
backend/supabase-scripts/: insert_excel_functions.sql
backend/tests/: get_test_token.py  test_ast_node.py  test_dynamic_symbol_table.py  test_enhanced_chat.py  test_excel_function_search.py  test_excel_parser.py  test_gemini_flow.py  test_hybrid_search_system.py  test_multiword_search.py  test_supabase_array.py  test_vector_search.py
backend/tests/data/: create_sample_excel.py  create_sample_excel_2.py
backend/tests/e2e_tests/: __init__.py  test_real_excel_scenarios.py
backend/tests/fixtures_tests/: __init__.py
backend/tests/integration_tests/: __init__.py  test_orchestrator_integration.py
backend/tests/performance_tests/: __init__.py
backend/tests/unit_tests/: __init__.py  test_ai_executor.py  test_docker_sandbox.py  test_validator.py
frontend/ExcelAIAgent/: manifest.xml  (+4 more)
(+13 files in other folders)
